# ckad-study

./: .gitignore  README.md  devbox.json  down.sh  pyproject.toml  up.sh
terraform/aws/: .terraform.lock.hcl  instance.tf  main.tf  outputs.tf  variables.tf
terraform/aws/initialize/: aws-configure.py  configure.sh  env.sh.skel
