[tool.poetry]
name = "ckad-study"
version = "0.1.0"
description = ""
authors = ["Tim McFadden <mtik00@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
awscli = "^1.32.29"


[tool.poetry.group.dev.dependencies]
ipython = "^8.20.0"
ipdb = "^0.13.13"
black = "^24.1.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
